@@ -1,13 +1,5 @@
 package com.example.cosmocats.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import com.example.cosmocats.domain.Product;
 import com.example.cosmocats.dto.product.ProductDto;
 import com.example.cosmocats.dto.product.ProductListDto;
@@ -16,9 +8,6 @@ import com.example.cosmocats.exception.ProductAlreadyExistsException;
 import com.example.cosmocats.exception.ProductNotFoundException;
 import com.example.cosmocats.repository.ProductRepository;
 import com.example.cosmocats.service.mapper.ProductMapper;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -27,7 +16,19 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
+@DisplayName("Product Service Tests")
 class ProductServiceTest {
 
     @Mock
@@ -47,7 +48,7 @@ class ProductServiceTest {
     @BeforeEach
     void setUp() {
         productId = UUID.fromString("550e8400-e29b-41d4-a716-446655440001");
-
+        
         product = Product.builder()
                 .productId(productId)
                 .category("Electronics")
@@ -73,13 +74,13 @@ class ProductServiceTest {
     }
 
     @Test
-    @DisplayName("createProduct - should create product successfully")
-    void createProduct_ShouldCreateProductSuccessfully() {
+    @DisplayName("Should create product when product does not exist")
+    void createProduct_ShouldReturnProductDto_WhenProductDoesNotExist() {
         // Arrange
-        when(productRepository.existsByName(productUpdateDto.getName())).thenReturn(false);
-        when(productMapper.toProduct(productUpdateDto)).thenReturn(product);
-        when(productRepository.save(product)).thenReturn(product);
-        when(productMapper.toProductDto(product)).thenReturn(productDto);
+        when(productRepository.existsByName(anyString())).thenReturn(false);
+        when(productMapper.toProduct(any(ProductUpdateDto.class))).thenReturn(product);
+        when(productRepository.save(any(Product.class))).thenReturn(product);
+        when(productMapper.toProductDto(any(Product.class))).thenReturn(productDto);
 
         // Act
         ProductDto result = productService.createProduct(productUpdateDto);
@@ -88,36 +89,35 @@ class ProductServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getProductId()).isEqualTo(productId);
         assertThat(result.getName()).isEqualTo("Quantum Phone X1");
-
-        verify(productRepository).existsByName(productUpdateDto.getName());
-        verify(productMapper).toProduct(productUpdateDto);
+        assertThat(result.getCategory()).isEqualTo("Electronics");
+        assertThat(result.getDescription()).isEqualTo("Advanced smartphone with quantum processor");
+        assertThat(result.getPrice()).isEqualTo(999.99f);
+        
+        verify(productRepository).existsByName("Quantum Phone X1");
         verify(productRepository).save(product);
         verify(productMapper).toProductDto(product);
     }
 
     @Test
-    @DisplayName("createProduct - should throw exception when product already exists")
-    void createProduct_WhenProductExists_ShouldThrowException() {
+    @DisplayName("Should throw exception when product already exists")
+    void createProduct_ShouldThrowException_WhenProductAlreadyExists() {
         // Arrange
-        when(productRepository.existsByName(productUpdateDto.getName())).thenReturn(true);
+        when(productRepository.existsByName(anyString())).thenReturn(true);
 
         // Act & Assert
         assertThatThrownBy(() -> productService.createProduct(productUpdateDto))
                 .isInstanceOf(ProductAlreadyExistsException.class)
-                .hasMessage("Product already exists with name: " + productUpdateDto.getName());
-
-        verify(productRepository).existsByName(productUpdateDto.getName());
-        verify(productMapper, never()).toProduct(any());
-        verify(productRepository, never()).save(any());
-        verify(productMapper, never()).toProductDto(any());
+                .hasMessageContaining("Product already exists with name: Quantum Phone X1");
+        
+        verify(productRepository, never()).save(any(Product.class));
     }
 
     @Test
-    @DisplayName("getProductById - should return product when exists")
-    void getProductById_WhenProductExists_ShouldReturnProduct() {
+    @DisplayName("Should return product by ID when product exists")
+    void getProductById_ShouldReturnProductDto_WhenProductExists() {
         // Arrange
         when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-        when(productMapper.toProductDto(product)).thenReturn(productDto);
+        when(productMapper.toProductDto(any(Product.class))).thenReturn(productDto);
 
         // Act
         ProductDto result = productService.getProductById(productId);
@@ -126,35 +126,38 @@ class ProductServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getProductId()).isEqualTo(productId);
         assertThat(result.getName()).isEqualTo("Quantum Phone X1");
-
+        assertThat(result.getCategory()).isEqualTo("Electronics");
+        assertThat(result.getDescription()).isEqualTo("Advanced smartphone with quantum processor");
+        assertThat(result.getPrice()).isEqualTo(999.99f);
+        
         verify(productRepository).findById(productId);
         verify(productMapper).toProductDto(product);
     }
 
     @Test
-    @DisplayName("getProductById - should throw exception when product not found")
-    void getProductById_WhenProductNotExists_ShouldThrowException() {
+    @DisplayName("Should throw exception when product not found by ID")
+    void getProductById_ShouldThrowException_WhenProductNotFound() {
         // Arrange
         when(productRepository.findById(productId)).thenReturn(Optional.empty());
 
         // Act & Assert
         assertThatThrownBy(() -> productService.getProductById(productId))
                 .isInstanceOf(ProductNotFoundException.class)
-                .hasMessage("Product not found with id: " + productId);
-
+                .hasMessageContaining("Product not found with id: " + productId);
+        
         verify(productRepository).findById(productId);
-        verify(productMapper, never()).toProductDto(any());
+        verify(productMapper, never()).toProductDto(any(Product.class));
     }
 
     @Test
-    @DisplayName("getAllProducts - should return all products")
-    void getAllProducts_ShouldReturnAllProducts() {
+    @DisplayName("Should return all products when products exist")
+    void getAllProducts_ShouldReturnProductListDto_WhenProductsExist() {
         // Arrange
-        List<Product> products = List.of(product);
+        List<Product> products = Arrays.asList(product);
         ProductListDto productListDto = ProductListDto.builder()
-                .products(List.of(productDto))
+                .products(Arrays.asList(productDto))
                 .build();
-
+        
         when(productRepository.findAll()).thenReturn(products);
         when(productMapper.toProductListDto(products)).thenReturn(productListDto);
 
@@ -165,20 +168,22 @@ class ProductServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getProducts()).hasSize(1);
         assertThat(result.getProducts().get(0).getProductId()).isEqualTo(productId);
-
+        assertThat(result.getProducts().get(0).getName()).isEqualTo("Quantum Phone X1");
+        assertThat(result.getProducts().get(0).getCategory()).isEqualTo("Electronics");
+        
         verify(productRepository).findAll();
         verify(productMapper).toProductListDto(products);
     }
 
     @Test
-    @DisplayName("getAllProducts - should return empty list when no products")
-    void getAllProducts_WhenNoProducts_ShouldReturnEmptyList() {
+    @DisplayName("Should return empty list when no products exist")
+    void getAllProducts_ShouldReturnEmptyList_WhenNoProductsExist() {
         // Arrange
         List<Product> emptyProducts = List.of();
         ProductListDto emptyProductListDto = ProductListDto.builder()
                 .products(List.of())
                 .build();
-
+        
         when(productRepository.findAll()).thenReturn(emptyProducts);
         when(productMapper.toProductListDto(emptyProducts)).thenReturn(emptyProductListDto);
 
@@ -188,120 +193,94 @@ class ProductServiceTest {
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getProducts()).isEmpty();
-
+        
         verify(productRepository).findAll();
         verify(productMapper).toProductListDto(emptyProducts);
     }
 
     @Test
-    @DisplayName("updateProduct - should update product successfully")
-    void updateProduct_ShouldUpdateProductSuccessfully() {
+    @DisplayName("Should update product when product exists and name is unique")
+    void updateProduct_ShouldReturnUpdatedProductDto_WhenProductExistsAndNameIsUnique() {
         // Arrange
         Product updatedProduct = product.toBuilder()
                 .name("Updated Quantum Phone")
-                .price(1099.99f)
+                .description("Updated description with cosmic features")
+                .price(899.99f)
                 .build();
-
+        
         ProductDto updatedProductDto = productDto.toBuilder()
                 .name("Updated Quantum Phone")
-                .price(1099.99f)
+                .description("Updated description with cosmic features")
+                .price(899.99f)
+                .build();
+        
+        ProductUpdateDto updateDto = ProductUpdateDto.builder()
+                .category("Electronics")
+                .name("Updated Quantum Phone")
+                .description("Updated description with cosmic features")
+                .price(899.99f)
                 .build();
 
         when(productRepository.existsById(productId)).thenReturn(true);
         when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-        when(productRepository.existsByName(updatedProduct.getName())).thenReturn(false);
-        when(productMapper.toProductWithId(productId, productUpdateDto)).thenReturn(updatedProduct);
-        when(productRepository.save(updatedProduct)).thenReturn(updatedProduct);
+        when(productRepository.existsByName(anyString())).thenReturn(false);
+        when(productMapper.toProductWithId(eq(productId), any(ProductUpdateDto.class))).thenReturn(updatedProduct);
+        when(productRepository.save(any(Product.class))).thenReturn(updatedProduct);
         when(productMapper.toProductDto(updatedProduct)).thenReturn(updatedProductDto);
 
         // Act
-        ProductDto result = productService.updateProduct(productId, productUpdateDto);
+        ProductDto result = productService.updateProduct(productId, updateDto);
 
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getName()).isEqualTo("Updated Quantum Phone");
-        assertThat(result.getPrice()).isEqualTo(1099.99f);
-
+        assertThat(result.getDescription()).isEqualTo("Updated description with cosmic features");
+        assertThat(result.getPrice()).isEqualTo(899.99f);
+        assertThat(result.getCategory()).isEqualTo("Electronics");
+        
         verify(productRepository).existsById(productId);
         verify(productRepository).findById(productId);
-        verify(productRepository).existsByName(updatedProduct.getName());
-        verify(productMapper).toProductWithId(productId, productUpdateDto);
+        verify(productRepository).existsByName("Updated Quantum Phone");
         verify(productRepository).save(updatedProduct);
         verify(productMapper).toProductDto(updatedProduct);
     }
 
     @Test
-    @DisplayName("updateProduct - should throw exception when product not found for update")
-    void updateProduct_WhenProductNotExists_ShouldThrowException() {
+    @DisplayName("Should throw exception when updating non-existent product")
+    void updateProduct_ShouldThrowException_WhenProductNotFound() {
         // Arrange
         when(productRepository.existsById(productId)).thenReturn(false);
 
         // Act & Assert
         assertThatThrownBy(() -> productService.updateProduct(productId, productUpdateDto))
                 .isInstanceOf(ProductNotFoundException.class)
-                .hasMessage("Product not found with id: " + productId);
-
-        verify(productRepository).existsById(productId);
-        verify(productRepository, never()).save(any());
-        verify(productMapper, never()).toProductDto(any());
+                .hasMessageContaining("Product not found with id: " + productId);
+        
+        verify(productRepository, never()).save(any(Product.class));
     }
 
     @Test
-    @DisplayName("updateProduct - should throw exception when product name already exists")
-    void updateProduct_WhenProductNameExists_ShouldThrowException() {
+    @DisplayName("Should throw exception when product name already exists during update")
+    void updateProduct_ShouldThrowException_WhenProductNameAlreadyExists() {
         // Arrange
-        String existingProductName = "Existing Product";
-        ProductUpdateDto updateDtoWithExistingName = productUpdateDto.toBuilder()
-                .name(existingProductName)
-                .build();
-
         when(productRepository.existsById(productId)).thenReturn(true);
         when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-        when(productRepository.existsByName(existingProductName)).thenReturn(true);
+        when(productRepository.existsByName(anyString())).thenReturn(true);
 
         // Act & Assert
-        assertThatThrownBy(() -> productService.updateProduct(productId, updateDtoWithExistingName))
+        assertThatThrownBy(() -> productService.updateProduct(productId, productUpdateDto))
                 .isInstanceOf(ProductAlreadyExistsException.class)
-                .hasMessage("Product already exists with name: " + existingProductName);
-
-        verify(productRepository).existsById(productId);
-        verify(productRepository).findById(productId);
-        verify(productRepository).existsByName(existingProductName);
-        verify(productRepository, never()).save(any());
-        verify(productMapper, never()).toProductDto(any());
+                .hasMessageContaining("Product already exists with name: Quantum Phone X1");
+        
+        verify(productRepository, never()).save(any(Product.class));
     }
 
     @Test
-    @DisplayName("updateProduct - should allow update when name unchanged")
-    void updateProduct_WhenNameUnchanged_ShouldUpdateSuccessfully() {
+    @DisplayName("Should delete product when product exists")
+    void deleteProduct_ShouldDeleteProduct_WhenProductExists() {
         // Arrange
         when(productRepository.existsById(productId)).thenReturn(true);
-        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-        // existsByName should not be called when name is unchanged
-        when(productMapper.toProductWithId(productId, productUpdateDto)).thenReturn(product);
-        when(productRepository.save(product)).thenReturn(product);
-        when(productMapper.toProductDto(product)).thenReturn(productDto);
-
-        // Act
-        ProductDto result = productService.updateProduct(productId, productUpdateDto);
-
-        // Assert
-        assertThat(result).isNotNull();
-        assertThat(result.getProductId()).isEqualTo(productId);
-
-        verify(productRepository).existsById(productId);
-        verify(productRepository).findById(productId);
-        verify(productRepository, never()).existsByName(any());
-        verify(productMapper).toProductWithId(productId, productUpdateDto);
-        verify(productRepository).save(product);
-        verify(productMapper).toProductDto(product);
-    }
-
-    @Test
-    @DisplayName("deleteProduct - should delete product when exists")
-    void deleteProduct_WhenProductExists_ShouldDeleteProduct() {
-        // Arrange
-        when(productRepository.existsById(productId)).thenReturn(true);
+        doNothing().when(productRepository).deleteById(productId);
 
         // Act
         productService.deleteProduct(productId);
@@ -312,13 +291,13 @@ class ProductServiceTest {
     }
 
     @Test
-    @DisplayName("deleteProduct - should not throw exception when product not found")
-    void deleteProduct_WhenProductNotExists_ShouldNotThrowException() {
+    @DisplayName("Should handle deleting non-existent product gracefully")
+    void deleteProduct_ShouldNotThrowException_WhenProductDoesNotExist() {
         // Arrange
         when(productRepository.existsById(productId)).thenReturn(false);
 
-        // Act
-        productService.deleteProduct(productId);
+        // Act & Assert
+        org.junit.jupiter.api.Assertions.assertDoesNotThrow(() -> productService.deleteProduct(productId));
 
         // Assert
         verify(productRepository).existsById(productId);
@@ -326,74 +305,89 @@ class ProductServiceTest {
     }
 
     @Test
-    @DisplayName("getProductsByCategory - should return products by category")
-    void getProductsByCategory_ShouldReturnProducts() {
+    @DisplayName("Should return filtered products by category")
+    void getProductsByCategory_ShouldReturnFilteredProducts_WhenCategoryExists() {
         // Arrange
-        String category = "Electronics";
+        Product product2 = Product.builder()
+                .productId(UUID.fromString("550e8400-e29b-41d4-a716-446655440002"))
+                .category("Books")
+                .name("Space Book")
+                .description("Book about space exploration")
+                .price(29.99f)
+                .build();
+        
+        List<Product> allProducts = Arrays.asList(product, product2);
         List<Product> electronicsProducts = List.of(product);
-        ProductListDto productListDto = ProductListDto.builder()
+        
+        ProductListDto electronicsProductListDto = ProductListDto.builder()
                 .products(List.of(productDto))
                 .build();
 
-        when(productRepository.findAll()).thenReturn(electronicsProducts);
-        when(productMapper.toProductListDto(electronicsProducts)).thenReturn(productListDto);
+        when(productRepository.findAll()).thenReturn(allProducts);
+        when(productMapper.toProductListDto(electronicsProducts)).thenReturn(electronicsProductListDto);
 
         // Act
-        ProductListDto result = productService.getProductsByCategory(category);
+        ProductListDto result = productService.getProductsByCategory("Electronics");
 
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getProducts()).hasSize(1);
-        assertThat(result.getProducts().get(0).getCategory()).isEqualTo(category);
-
+        assertThat(result.getProducts().get(0).getCategory()).isEqualTo("Electronics");
+        assertThat(result.getProducts().get(0).getName()).isEqualTo("Quantum Phone X1");
+        assertThat(result.getProducts().get(0).getPrice()).isEqualTo(999.99f);
+        
         verify(productRepository).findAll();
         verify(productMapper).toProductListDto(electronicsProducts);
     }
 
     @Test
-    @DisplayName("getProductsByCategory - should return empty list when no products in category")
-    void getProductsByCategory_WhenNoProductsInCategory_ShouldReturnEmptyList() {
+    @DisplayName("Should return empty list when no products in category")
+    void getProductsByCategory_ShouldReturnEmptyList_WhenNoProductsInCategory() {
         // Arrange
-        String category = "NonExistentCategory";
-        List<Product> allProducts = List.of(product); // Only electronics products
+        List<Product> allProducts = Arrays.asList(product);
+        List<Product> emptyProducts = List.of();
+        
         ProductListDto emptyProductListDto = ProductListDto.builder()
                 .products(List.of())
                 .build();
 
         when(productRepository.findAll()).thenReturn(allProducts);
-        when(productMapper.toProductListDto(List.of())).thenReturn(emptyProductListDto);
+        when(productMapper.toProductListDto(emptyProducts)).thenReturn(emptyProductListDto);
 
         // Act
-        ProductListDto result = productService.getProductsByCategory(category);
+        ProductListDto result = productService.getProductsByCategory("NonExistentCategory");
 
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getProducts()).isEmpty();
-
+        
         verify(productRepository).findAll();
-        verify(productMapper).toProductListDto(List.of());
+        verify(productMapper).toProductListDto(emptyProducts);
     }
 
     @Test
-    @DisplayName("getProductsByCategory - should be case insensitive")
+    @DisplayName("Should handle case insensitive category filtering")
     void getProductsByCategory_ShouldBeCaseInsensitive() {
         // Arrange
-        String categoryUpperCase = "ELECTRONICS";
+        List<Product> allProducts = Arrays.asList(product);
         List<Product> electronicsProducts = List.of(product);
-        ProductListDto productListDto = ProductListDto.builder()
+        
+        ProductListDto electronicsProductListDto = ProductListDto.builder()
                 .products(List.of(productDto))
                 .build();
 
-        when(productRepository.findAll()).thenReturn(electronicsProducts);
-        when(productMapper.toProductListDto(electronicsProducts)).thenReturn(productListDto);
+        when(productRepository.findAll()).thenReturn(allProducts);
+        when(productMapper.toProductListDto(electronicsProducts)).thenReturn(electronicsProductListDto);
 
         // Act
-        ProductListDto result = productService.getProductsByCategory(categoryUpperCase);
+        ProductListDto result = productService.getProductsByCategory("electronics");
 
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getProducts()).hasSize(1);
-
+        assertThat(result.getProducts().get(0).getCategory()).isEqualTo("Electronics");
+        assertThat(result.getProducts().get(0).getName()).isEqualTo("Quantum Phone X1");
+        
         verify(productRepository).findAll();
         verify(productMapper).toProductListDto(electronicsProducts);
     }
